--- a/MeetGroups/app/src/main/res/values-it-rIT/strings.xml
+++ b/MeetGroups/app/src/main/res/values-it-rIT/strings.xml
@@ -56,4 +56,14 @@
     <string name="not_admin">Non sei un admin😎</string>
     <string name="updated_journal">Aggiornato il titolo del diario🤝</string>
     <string name="insert_journal_title_first">Insert your Journal title first!👍🏻</string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="attachment_summary_on"><![CDATA[Benvenuto in <b>MeetGroups!</b><br>Quest\'app ti permette di condividere esperienze e ricordi delle tue vacanze con i tuoi amici.<br>Clicca qui sopra per aprire un nuovo diario e iniziare la tua avventura. Una volta terminata la vacanza i tuoi diari rimarrano salvati nel tuo profilo.<br>Inoltre nella sezione <b>Maps</b> puoi trovare persone che stanno usando l\'app nelle tue vicinanze!<br>Detto questo... <b>Buona Vacanza!</b>]]></string>
+    <string name="startHoliday"><![CDATA[Benvenuto in <b>MeetGroups!</b><br>Quest\'app ti permette di condividere esperienze e ricordi delle tue vacanze con i tuoi amici.<br>Clicca qui sopra per aprire un nuovo diario e iniziare la tua avventura. Una volta terminata la vacanza i tuoi diari rimarrano salvati nel tuo profilo.<br>Inoltre nella sezione <b>Maps</b> puoi trovare persone che stanno usando l\'app nelle tue vicinanze!<br>Detto questo... <b>Buona Vacanza!</b>]]></string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="sync_title">Sync email periodically</string>
+    <string name="reply_title">Default reply action</string>
+    <string name="signature_title">Your signature</string>
+    <string name="sync_header">Sync</string>
+    <string name="title_activity_edit_profile">EditProfileActivity</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
